syntax = "proto3";

option go_package = "github.com/Reigenleif/go-grpc-gauth-pg";


service Emoji {
    rpc GetEmoji (GetEmojiRequest) returns (EmojiResponse) {}
    rpc CreateEmoji (CreateEmojiRequest) returns (EmojiResponse) {}
    rpc UpdateEmoji (UpdateEmojiRequest) returns (EmojiResponse) {}
    rpc DeleteEmoji (DeleteEmojiRequest) returns (EmojiResponse) {}
}

message GetEmojiRequest {
    string id = 1;
}

message CreateEmojiRequest {
    string name = 2;
    string description = 3;
    string image = 4;
}

message UpdateEmojiRequest {
    string id = 1;
    string name = 2;
    string description = 3;
    string image = 4;
}

message DeleteEmojiRequest {
    string id = 1;
}

message EmojiResponse {
    string id = 1;
    string name = 2;
    string description = 3;
    string image = 4;
}



service User {
    rpc GetUser (GetUserRequest) returns (UserResponse) {}
    rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
    rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (UserResponse) {}
}

message GetUserRequest {
    string id = 1;
}

message CreateUserRequest {
    string name = 2;
    string email = 3;
    string password = 4;
}

message UpdateUserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
    string password = 4;
}


message DeleteUserRequest {
    string id = 1;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    string token = 4;
}